2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am (btree_test_CPPFLAGS): Remove special `printf' handling.

2008-02-21  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (COMMON_CPPFLAGS): Remove variable.
	(libhurd_btree_a_CPPFLAGS): Replace use of above with
	$(USER_CPPFLAGS).
	(libhurd_btree_a_CFLAGS): New variable.
	(btree_test_CPPFLAGS): Replace use $(COMMON_CPPFLAGS) with
	$(CHECK_CPPFLAGS).

2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* btree.h (BTREE_(check_tree_internal)) [!NDEBUG && !NCHECKS]:
	Only declare in this case.
	(BTREE_check_tree_internal_): Fix argument names.
	* btree.c (BTREE_(check_tree_internal)) [!NDEBUG && !NCHECKS]: 
	Only define in this case.
	* Makefile.am (AM_CPPFLAGS): Rename from this...
	(COMMON_CPPFLAGS): ... to this.  Update users.
	(libhurd_btree_a_CPPFLAGS): Add -DNCHECKS.

2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* btree.h (BTREE_(insert)) [!NDEBUG]: Assert that the node
	pointers are clear.
	* btree.c (BTREE_(detach)) [!NDEBUG]: Clear ROOT.
	* btree-test.c (main): Clear allocated nodes.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* btree-test.c (program_name): Change type to char *.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* t-stress.c: New file.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* btree.h (btree_prev): Correctly set NODE's left thread.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* btree.c: Include <hurd/stddef.h>.
	(dump_tree): Use S_PRINTF, not printf.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* btree-test.c (debug): #undef before defining.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (btree_test_CPPFLAGS): New variable.
	(btree_test_LDADD): Remove.
	(btree_test_SOURCES): Add btree.c.

	* btree.c (node_t): Include <stdio.h>.

2007-12-17  Neal H. Walfield  <neal@gnu.org>

	* btree.h (BTREE_(check_tree_internal)): Take additional
	parameter, the btree.  Update users.
	(BTREE_check_tree_internal_): Take additional parameter, the
	btree.  Update users.