@@ -10,4 +10,10 @@
 # WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
-AC_CONFIG_LINKS([include/hurd/btree.h:libhurd-btree/btree.h])
+AC_CONFIG_LINKS([sysroot/include/hurd/btree.h:libhurd-btree/btree.h])
+
+AC_CONFIG_COMMANDS_POST([
+  mkdir -p sysroot/lib libhurd-btree &&
+  ln -sf ../../libhurd-btree/libhurd-btree.a sysroot/lib/ &&
+  touch libhurd-btree/libhurd-btree.a
+])
